# nonemoji

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
nonemoji/: __init__.py  __main__.py  cli.py  command.py  emoji.py  feature.py
nonemoji/prompts/: list.py
