[tool.poetry]
name = "nonemoji"
version = "0.1.0"
description = "Simple gitmoji cli written in python"
authors = ["jigsaw <j1g5aw@foxmail.com>", "yanyongyu <yyy@nonebot.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
noneprompt = "^0.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.19.0"

[tool.poetry.scripts]
nonemoji = "nonemoji.__main__:main"

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
